# i3-open-next-ws

./: Cargo.toml  LICENSE  README.md
src/: main.rs
